Query view corrections
Wrap the Laravel variable used for the Twitter source link in Vue's data in quotes to stop JavaScript syntax error. Remove dynamic state from hint view toggle button as this can be hidden by a URL parameter. Finally, add a small margin to anchors.

--- a/resources/sass/design.scss
+++ b/resources/sass/design.scss
@@ -30,6 +30,10 @@ h2 {
 	background-color: $secondary-color;
 }
 
+.h4 {
+	margin-bottom: 0.5rem;
+}
+
 #data {
 	border: thin solid #ddd;
 	background: #eee;
